--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
       <div class="container">
         <nav class="main-nav">
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
+            <li><a href="/site">Home</a></li>
+            <li><a href="/site/about">About</a></li>
           </ul>
         </nav>
-        <h1><a href="/">bumz714's Site</a></h1>
+        <h1><a href="/site">bumz714's Site</a></h1>
       </div>
     </header>
     <div class="content">
